--- a/Vicinime-iOS/Card.xib
+++ b/Vicinime-iOS/Card.xib
@@ -2,58 +2,67 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
-        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
-        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="425" id="6Xd-JQ-aDe" customClass="CardCell" customModule="Vicinime_iOS" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="-3" width="500" height="425"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="407" id="6Xd-JQ-aDe" customClass="CardCell" customModule="Vicinime_iOS" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="500" height="407"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6Xd-JQ-aDe" id="pcU-g8-0Rq">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="90A-QQ-9CM">
-                        <rect key="frame" x="469" y="386" width="30" height="30"/>
+                        <rect key="frame" x="476" y="368" width="30" height="30"/>
                         <state key="normal" title="☹">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vZM-fr-8oG">
-                        <rect key="frame" x="1" y="386" width="30" height="30"/>
+                        <rect key="frame" x="-6" y="368" width="30" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="30" id="n3k-Bu-7Ic"/>
+                            <constraint firstAttribute="width" constant="30" id="vU9-Fm-dvB"/>
                         </constraints>
                         <state key="normal" title="☺︎">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cat.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="47H-ka-qoE">
-                        <rect key="frame" x="1" y="8" width="498" height="370"/>
-                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1C4-4s-Wyx">
-                        <rect key="frame" x="39" y="390" width="422" height="21"/>
+                        <rect key="frame" x="32" y="372" width="436" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Thj-Cs-i4l">
+                        <rect key="frame" x="1" y="8" width="498" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="ZOw-Nx-T2H"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cat.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="47H-ka-qoE">
+                        <rect key="frame" x="-6" y="37" width="512" height="323"/>
+                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="vZM-fr-8oG" firstAttribute="leading" secondItem="47H-ka-qoE" secondAttribute="leading" id="0n3-5Z-WPo"/>
-                    <constraint firstItem="vZM-fr-8oG" firstAttribute="top" secondItem="47H-ka-qoE" secondAttribute="bottom" constant="8" symbolic="YES" id="1Pg-DR-8FG"/>
-                    <constraint firstItem="vZM-fr-8oG" firstAttribute="baseline" secondItem="1C4-4s-Wyx" secondAttribute="baseline" id="39Y-UV-BUn"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="1C4-4s-Wyx" secondAttribute="bottom" constant="5.5" id="4Mf-qt-Bod"/>
-                    <constraint firstItem="47H-ka-qoE" firstAttribute="leading" secondItem="pcU-g8-0Rq" secondAttribute="leadingMargin" constant="-7" id="E58-bV-aSr"/>
-                    <constraint firstItem="1C4-4s-Wyx" firstAttribute="centerX" secondItem="47H-ka-qoE" secondAttribute="centerX" id="EJV-F4-bqt"/>
-                    <constraint firstItem="1C4-4s-Wyx" firstAttribute="top" secondItem="47H-ka-qoE" secondAttribute="bottom" constant="12" id="EaM-jP-boU"/>
-                    <constraint firstItem="47H-ka-qoE" firstAttribute="centerX" secondItem="pcU-g8-0Rq" secondAttribute="centerX" id="Lji-6h-YT7"/>
-                    <constraint firstItem="90A-QQ-9CM" firstAttribute="baseline" secondItem="1C4-4s-Wyx" secondAttribute="baseline" id="Sik-Sb-q0d"/>
-                    <constraint firstItem="1C4-4s-Wyx" firstAttribute="leading" secondItem="vZM-fr-8oG" secondAttribute="trailing" constant="8" symbolic="YES" id="UMm-UF-bZf"/>
-                    <constraint firstItem="47H-ka-qoE" firstAttribute="top" secondItem="pcU-g8-0Rq" secondAttribute="topMargin" id="h2n-u3-Z8w"/>
-                    <constraint firstItem="1C4-4s-Wyx" firstAttribute="baseline" secondItem="vZM-fr-8oG" secondAttribute="firstBaseline" id="qEK-Dg-sAz"/>
-                    <constraint firstItem="90A-QQ-9CM" firstAttribute="leading" secondItem="1C4-4s-Wyx" secondAttribute="trailing" constant="8" symbolic="YES" id="uPD-sh-Grg"/>
+                    <constraint firstItem="vZM-fr-8oG" firstAttribute="top" secondItem="47H-ka-qoE" secondAttribute="bottom" constant="8" symbolic="YES" id="1FE-k7-rIn"/>
+                    <constraint firstItem="1C4-4s-Wyx" firstAttribute="top" secondItem="47H-ka-qoE" secondAttribute="bottom" constant="12" id="2Ew-bA-529"/>
+                    <constraint firstItem="Thj-Cs-i4l" firstAttribute="top" secondItem="pcU-g8-0Rq" secondAttribute="topMargin" id="CGF-NF-0PT"/>
+                    <constraint firstItem="1C4-4s-Wyx" firstAttribute="leading" secondItem="vZM-fr-8oG" secondAttribute="trailing" constant="8" symbolic="YES" id="Csy-6m-KZf"/>
+                    <constraint firstItem="47H-ka-qoE" firstAttribute="top" secondItem="Thj-Cs-i4l" secondAttribute="bottom" constant="8" symbolic="YES" id="K3f-WQ-MsS"/>
+                    <constraint firstItem="90A-QQ-9CM" firstAttribute="trailing" secondItem="47H-ka-qoE" secondAttribute="trailing" id="KhD-Ra-8Xm"/>
+                    <constraint firstItem="Thj-Cs-i4l" firstAttribute="leading" secondItem="pcU-g8-0Rq" secondAttribute="leadingMargin" constant="-7" id="RHg-3a-Wn5"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="1C4-4s-Wyx" secondAttribute="bottom" constant="5.5" id="RYP-aj-vyQ"/>
+                    <constraint firstItem="90A-QQ-9CM" firstAttribute="leading" secondItem="1C4-4s-Wyx" secondAttribute="trailing" constant="8" symbolic="YES" id="UB1-7h-Its"/>
+                    <constraint firstItem="vZM-fr-8oG" firstAttribute="leading" secondItem="47H-ka-qoE" secondAttribute="leading" id="UiM-bH-EMF"/>
+                    <constraint firstItem="1C4-4s-Wyx" firstAttribute="baseline" secondItem="90A-QQ-9CM" secondAttribute="baseline" id="Wba-F0-HZz"/>
+                    <constraint firstItem="1C4-4s-Wyx" firstAttribute="centerX" secondItem="pcU-g8-0Rq" secondAttribute="centerX" id="elk-UW-NTG"/>
+                    <constraint firstItem="1C4-4s-Wyx" firstAttribute="baseline" secondItem="vZM-fr-8oG" secondAttribute="baseline" id="hn3-wF-cBe"/>
+                    <constraint firstItem="47H-ka-qoE" firstAttribute="centerX" secondItem="Thj-Cs-i4l" secondAttribute="centerX" id="jFL-6e-7Pr"/>
+                    <constraint firstItem="47H-ka-qoE" firstAttribute="leading" secondItem="pcU-g8-0Rq" secondAttribute="leadingMargin" constant="-14" id="pY8-ix-tHR"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -61,8 +70,9 @@
                 <outlet property="dislikeImage" destination="90A-QQ-9CM" id="AmC-na-dRK"/>
                 <outlet property="likeButton" destination="vZM-fr-8oG" id="ecR-ky-9t3"/>
                 <outlet property="mainImage" destination="47H-ka-qoE" id="d8h-e0-hX1"/>
+                <outlet property="titleLabel" destination="Thj-Cs-i4l" id="Ga3-Aj-LgF"/>
             </connections>
-            <point key="canvasLocation" x="439" y="42.5"/>
+            <point key="canvasLocation" x="439" y="33.5"/>
         </tableViewCell>
     </objects>
     <resources>
