--- a/Vicinime-iOS/Card.xib
+++ b/Vicinime-iOS/Card.xib
@@ -43,7 +43,7 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cat.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="47H-ka-qoE">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="47H-ka-qoE">
                         <rect key="frame" x="-6" y="37" width="512" height="323"/>
                     </imageView>
                 </subviews>
@@ -75,7 +75,4 @@
             <point key="canvasLocation" x="439" y="33.5"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="cat.jpg" width="284" height="177"/>
-    </resources>
 </document>
