--- a/Vicinime-iOS/Card.xib
+++ b/Vicinime-iOS/Card.xib
@@ -7,63 +7,82 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="407" id="6Xd-JQ-aDe" customClass="CardCell" customModule="Vicinime_iOS" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="500" height="407"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="300" id="6Xd-JQ-aDe" customClass="CardCell" customModule="Vicinime_iOS" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="500" height="384"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6Xd-JQ-aDe" id="pcU-g8-0Rq">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="90A-QQ-9CM">
-                        <rect key="frame" x="476" y="368" width="30" height="30"/>
+                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="90A-QQ-9CM">
+                        <rect key="frame" x="286" y="345" width="213" height="30"/>
                         <state key="normal" title="☹">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vZM-fr-8oG">
-                        <rect key="frame" x="-6" y="368" width="30" height="30"/>
+                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vZM-fr-8oG">
+                        <rect key="frame" x="8" y="345" width="206" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="30" id="vU9-Fm-dvB"/>
+                            <constraint firstAttribute="width" constant="206" id="6Nh-g5-Gy5"/>
+                            <constraint firstAttribute="width" constant="30" id="Eg4-yv-6ai"/>
                         </constraints>
                         <state key="normal" title="☺︎">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Eg4-yv-6ai"/>
+                            </mask>
+                        </variation>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1C4-4s-Wyx">
-                        <rect key="frame" x="32" y="372" width="436" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Thj-Cs-i4l">
-                        <rect key="frame" x="1" y="8" width="498" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Thj-Cs-i4l">
+                        <rect key="frame" x="8" y="8" width="491" height="21"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="21" id="ZOw-Nx-T2H"/>
+                            <constraint firstAttribute="height" constant="21" id="fcm-dw-xSZ"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="47H-ka-qoE">
-                        <rect key="frame" x="-6" y="37" width="512" height="323"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="47H-ka-qoE">
+                        <rect key="frame" x="8" y="37" width="491" height="300"/>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1C4-4s-Wyx">
+                        <rect key="frame" x="222" y="342" width="56" height="33"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="vZM-fr-8oG" firstAttribute="top" secondItem="47H-ka-qoE" secondAttribute="bottom" constant="8" symbolic="YES" id="1FE-k7-rIn"/>
-                    <constraint firstItem="1C4-4s-Wyx" firstAttribute="top" secondItem="47H-ka-qoE" secondAttribute="bottom" constant="12" id="2Ew-bA-529"/>
-                    <constraint firstItem="Thj-Cs-i4l" firstAttribute="top" secondItem="pcU-g8-0Rq" secondAttribute="topMargin" id="CGF-NF-0PT"/>
-                    <constraint firstItem="1C4-4s-Wyx" firstAttribute="leading" secondItem="vZM-fr-8oG" secondAttribute="trailing" constant="8" symbolic="YES" id="Csy-6m-KZf"/>
-                    <constraint firstItem="47H-ka-qoE" firstAttribute="top" secondItem="Thj-Cs-i4l" secondAttribute="bottom" constant="8" symbolic="YES" id="K3f-WQ-MsS"/>
-                    <constraint firstItem="90A-QQ-9CM" firstAttribute="trailing" secondItem="47H-ka-qoE" secondAttribute="trailing" id="KhD-Ra-8Xm"/>
-                    <constraint firstItem="Thj-Cs-i4l" firstAttribute="leading" secondItem="pcU-g8-0Rq" secondAttribute="leadingMargin" constant="-7" id="RHg-3a-Wn5"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="1C4-4s-Wyx" secondAttribute="bottom" constant="5.5" id="RYP-aj-vyQ"/>
-                    <constraint firstItem="90A-QQ-9CM" firstAttribute="leading" secondItem="1C4-4s-Wyx" secondAttribute="trailing" constant="8" symbolic="YES" id="UB1-7h-Its"/>
-                    <constraint firstItem="vZM-fr-8oG" firstAttribute="leading" secondItem="47H-ka-qoE" secondAttribute="leading" id="UiM-bH-EMF"/>
-                    <constraint firstItem="1C4-4s-Wyx" firstAttribute="baseline" secondItem="90A-QQ-9CM" secondAttribute="baseline" id="Wba-F0-HZz"/>
-                    <constraint firstItem="1C4-4s-Wyx" firstAttribute="centerX" secondItem="pcU-g8-0Rq" secondAttribute="centerX" id="elk-UW-NTG"/>
-                    <constraint firstItem="1C4-4s-Wyx" firstAttribute="baseline" secondItem="vZM-fr-8oG" secondAttribute="baseline" id="hn3-wF-cBe"/>
-                    <constraint firstItem="47H-ka-qoE" firstAttribute="centerX" secondItem="Thj-Cs-i4l" secondAttribute="centerX" id="jFL-6e-7Pr"/>
-                    <constraint firstItem="47H-ka-qoE" firstAttribute="leading" secondItem="pcU-g8-0Rq" secondAttribute="leadingMargin" constant="-14" id="pY8-ix-tHR"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="1C4-4s-Wyx" secondAttribute="bottom" constant="0.5" id="2fb-2g-gRI"/>
+                    <constraint firstItem="47H-ka-qoE" firstAttribute="leading" secondItem="Thj-Cs-i4l" secondAttribute="leading" id="F3m-mM-GdP"/>
+                    <constraint firstItem="1C4-4s-Wyx" firstAttribute="leading" secondItem="vZM-fr-8oG" secondAttribute="trailing" constant="8" symbolic="YES" id="NrI-BM-fhD"/>
+                    <constraint firstItem="47H-ka-qoE" firstAttribute="trailing" secondItem="Thj-Cs-i4l" secondAttribute="trailing" id="PC0-Ub-KnO"/>
+                    <constraint firstItem="vZM-fr-8oG" firstAttribute="leading" secondItem="47H-ka-qoE" secondAttribute="leading" id="Wil-IN-dTo"/>
+                    <constraint firstItem="47H-ka-qoE" firstAttribute="leading" secondItem="vZM-fr-8oG" secondAttribute="leading" id="ZEz-Nt-21j"/>
+                    <constraint firstItem="47H-ka-qoE" firstAttribute="top" secondItem="Thj-Cs-i4l" secondAttribute="bottom" constant="8" symbolic="YES" id="aEc-gr-hec"/>
+                    <constraint firstItem="Thj-Cs-i4l" firstAttribute="top" secondItem="pcU-g8-0Rq" secondAttribute="topMargin" id="cWK-Zw-FQU"/>
+                    <constraint firstItem="90A-QQ-9CM" firstAttribute="leading" secondItem="1C4-4s-Wyx" secondAttribute="trailing" constant="8" symbolic="YES" id="eRa-vV-RfN"/>
+                    <constraint firstItem="90A-QQ-9CM" firstAttribute="trailing" secondItem="47H-ka-qoE" secondAttribute="trailing" id="ejh-DV-gkd"/>
+                    <constraint firstItem="90A-QQ-9CM" firstAttribute="trailing" secondItem="47H-ka-qoE" secondAttribute="trailing" id="fl3-0I-2Wb"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="Thj-Cs-i4l" secondAttribute="trailing" constant="-14" id="gnK-ju-Og9"/>
+                    <constraint firstItem="vZM-fr-8oG" firstAttribute="baseline" secondItem="1C4-4s-Wyx" secondAttribute="baseline" id="lsc-8E-5St"/>
+                    <constraint firstItem="vZM-fr-8oG" firstAttribute="top" secondItem="47H-ka-qoE" secondAttribute="bottom" constant="8" symbolic="YES" id="nNX-8c-CSp"/>
+                    <constraint firstItem="47H-ka-qoE" firstAttribute="leading" secondItem="Thj-Cs-i4l" secondAttribute="leading" id="oGx-U6-7wv"/>
+                    <constraint firstItem="90A-QQ-9CM" firstAttribute="baseline" secondItem="vZM-fr-8oG" secondAttribute="baseline" id="pLs-Hu-wRd"/>
+                    <constraint firstItem="1C4-4s-Wyx" firstAttribute="bottom" secondItem="vZM-fr-8oG" secondAttribute="bottom" id="rL4-Rd-LKg"/>
+                    <constraint firstItem="1C4-4s-Wyx" firstAttribute="centerX" secondItem="pcU-g8-0Rq" secondAttribute="centerX" id="wsr-cs-GNv"/>
+                    <constraint firstItem="Thj-Cs-i4l" firstAttribute="leading" secondItem="pcU-g8-0Rq" secondAttribute="leadingMargin" constant="-7" id="ypy-K7-3Fk"/>
+                    <constraint firstItem="1C4-4s-Wyx" firstAttribute="top" secondItem="47H-ka-qoE" secondAttribute="bottom" constant="5" id="zSv-Yq-RsP"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="ZEz-Nt-21j"/>
+                        <exclude reference="oGx-U6-7wv"/>
+                        <exclude reference="lsc-8E-5St"/>
+                        <exclude reference="fl3-0I-2Wb"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="descriptionText" destination="1C4-4s-Wyx" id="aVQ-JE-C4n"/>
@@ -72,7 +91,7 @@
                 <outlet property="mainImage" destination="47H-ka-qoE" id="d8h-e0-hX1"/>
                 <outlet property="titleLabel" destination="Thj-Cs-i4l" id="Ga3-Aj-LgF"/>
             </connections>
-            <point key="canvasLocation" x="439" y="33.5"/>
+            <point key="canvasLocation" x="439" y="22"/>
         </tableViewCell>
     </objects>
 </document>
