--- a/Vicinime-iOS/Card.xib
+++ b/Vicinime-iOS/Card.xib
@@ -7,91 +7,95 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="300" id="6Xd-JQ-aDe" customClass="CardCell" customModule="Vicinime_iOS" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="500" height="384"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="299" id="k6W-ho-S4c" customClass="CardCell" customModule="Vicinime_iOS" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="1" width="320" height="299"/>
             <autoresizingMask key="autoresizingMask"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6Xd-JQ-aDe" id="pcU-g8-0Rq">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="k6W-ho-S4c" id="LYG-je-jTj">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="90A-QQ-9CM">
-                        <rect key="frame" x="286" y="345" width="213" height="30"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Description" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6zr-g7-s9f">
+                        <rect key="frame" x="46" y="260.5" width="221" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="laB-bY-Aaz">
+                        <rect key="frame" x="275" y="251" width="37" height="39.5"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="37" id="HoI-ND-Ow5"/>
+                        </constraints>
                         <state key="normal" title="☹">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
-                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vZM-fr-8oG">
-                        <rect key="frame" x="8" y="345" width="206" height="30"/>
+                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OAc-pt-4lm">
+                        <rect key="frame" x="1" y="251" width="37" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="206" id="6Nh-g5-Gy5"/>
-                            <constraint firstAttribute="width" constant="30" id="Eg4-yv-6ai"/>
+                            <constraint firstAttribute="width" constant="37" id="nvx-mm-hzg"/>
                         </constraints>
                         <state key="normal" title="☺︎">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
+                    </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NsM-FS-e2l">
+                        <rect key="frame" x="1" y="8" width="311" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XaU-1X-7Yc">
+                        <rect key="frame" x="8" y="36" width="304" height="207"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="318" id="gjS-nM-tDB"/>
+                            <constraint firstAttribute="height" constant="254" id="xYP-GL-DX3"/>
+                        </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="Eg4-yv-6ai"/>
+                                <exclude reference="gjS-nM-tDB"/>
+                                <exclude reference="xYP-GL-DX3"/>
                             </mask>
                         </variation>
-                    </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Thj-Cs-i4l">
-                        <rect key="frame" x="8" y="8" width="491" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="21" id="fcm-dw-xSZ"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="47H-ka-qoE">
-                        <rect key="frame" x="8" y="37" width="491" height="300"/>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1C4-4s-Wyx">
-                        <rect key="frame" x="222" y="342" width="56" height="33"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottomMargin" secondItem="1C4-4s-Wyx" secondAttribute="bottom" constant="0.5" id="2fb-2g-gRI"/>
-                    <constraint firstItem="47H-ka-qoE" firstAttribute="leading" secondItem="Thj-Cs-i4l" secondAttribute="leading" id="F3m-mM-GdP"/>
-                    <constraint firstItem="1C4-4s-Wyx" firstAttribute="leading" secondItem="vZM-fr-8oG" secondAttribute="trailing" constant="8" symbolic="YES" id="NrI-BM-fhD"/>
-                    <constraint firstItem="47H-ka-qoE" firstAttribute="trailing" secondItem="Thj-Cs-i4l" secondAttribute="trailing" id="PC0-Ub-KnO"/>
-                    <constraint firstItem="vZM-fr-8oG" firstAttribute="leading" secondItem="47H-ka-qoE" secondAttribute="leading" id="Wil-IN-dTo"/>
-                    <constraint firstItem="47H-ka-qoE" firstAttribute="leading" secondItem="vZM-fr-8oG" secondAttribute="leading" id="ZEz-Nt-21j"/>
-                    <constraint firstItem="47H-ka-qoE" firstAttribute="top" secondItem="Thj-Cs-i4l" secondAttribute="bottom" constant="8" symbolic="YES" id="aEc-gr-hec"/>
-                    <constraint firstItem="Thj-Cs-i4l" firstAttribute="top" secondItem="pcU-g8-0Rq" secondAttribute="topMargin" id="cWK-Zw-FQU"/>
-                    <constraint firstItem="90A-QQ-9CM" firstAttribute="leading" secondItem="1C4-4s-Wyx" secondAttribute="trailing" constant="8" symbolic="YES" id="eRa-vV-RfN"/>
-                    <constraint firstItem="90A-QQ-9CM" firstAttribute="trailing" secondItem="47H-ka-qoE" secondAttribute="trailing" id="ejh-DV-gkd"/>
-                    <constraint firstItem="90A-QQ-9CM" firstAttribute="trailing" secondItem="47H-ka-qoE" secondAttribute="trailing" id="fl3-0I-2Wb"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="Thj-Cs-i4l" secondAttribute="trailing" constant="-14" id="gnK-ju-Og9"/>
-                    <constraint firstItem="vZM-fr-8oG" firstAttribute="baseline" secondItem="1C4-4s-Wyx" secondAttribute="baseline" id="lsc-8E-5St"/>
-                    <constraint firstItem="vZM-fr-8oG" firstAttribute="top" secondItem="47H-ka-qoE" secondAttribute="bottom" constant="8" symbolic="YES" id="nNX-8c-CSp"/>
-                    <constraint firstItem="47H-ka-qoE" firstAttribute="leading" secondItem="Thj-Cs-i4l" secondAttribute="leading" id="oGx-U6-7wv"/>
-                    <constraint firstItem="90A-QQ-9CM" firstAttribute="baseline" secondItem="vZM-fr-8oG" secondAttribute="baseline" id="pLs-Hu-wRd"/>
-                    <constraint firstItem="1C4-4s-Wyx" firstAttribute="bottom" secondItem="vZM-fr-8oG" secondAttribute="bottom" id="rL4-Rd-LKg"/>
-                    <constraint firstItem="1C4-4s-Wyx" firstAttribute="centerX" secondItem="pcU-g8-0Rq" secondAttribute="centerX" id="wsr-cs-GNv"/>
-                    <constraint firstItem="Thj-Cs-i4l" firstAttribute="leading" secondItem="pcU-g8-0Rq" secondAttribute="leadingMargin" constant="-7" id="ypy-K7-3Fk"/>
-                    <constraint firstItem="1C4-4s-Wyx" firstAttribute="top" secondItem="47H-ka-qoE" secondAttribute="bottom" constant="5" id="zSv-Yq-RsP"/>
+                    <constraint firstItem="6zr-g7-s9f" firstAttribute="top" secondItem="XaU-1X-7Yc" secondAttribute="bottom" constant="8" id="2VX-dd-lsW"/>
+                    <constraint firstItem="NsM-FS-e2l" firstAttribute="leading" secondItem="LYG-je-jTj" secondAttribute="leadingMargin" constant="-7" id="6Jr-Mb-x18"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="XaU-1X-7Yc" secondAttribute="trailing" id="97W-0a-dKh"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="6zr-g7-s9f" secondAttribute="bottom" id="AMz-6I-sRp"/>
+                    <constraint firstItem="laB-bY-Aaz" firstAttribute="top" secondItem="XaU-1X-7Yc" secondAttribute="bottom" constant="8" id="AZ9-QN-3Ed"/>
+                    <constraint firstItem="laB-bY-Aaz" firstAttribute="leading" secondItem="6zr-g7-s9f" secondAttribute="trailing" constant="8" id="Bd7-X6-76h"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="laB-bY-Aaz" secondAttribute="bottom" id="D3C-fJ-TI2"/>
+                    <constraint firstItem="NsM-FS-e2l" firstAttribute="top" secondItem="LYG-je-jTj" secondAttribute="topMargin" id="FlO-HX-CXv"/>
+                    <constraint firstItem="6zr-g7-s9f" firstAttribute="centerY" secondItem="OAc-pt-4lm" secondAttribute="centerY" id="KOq-72-qNR"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="XaU-1X-7Yc" secondAttribute="trailing" constant="-7" id="NdC-nw-eY0"/>
+                    <constraint firstItem="OAc-pt-4lm" firstAttribute="top" secondItem="XaU-1X-7Yc" secondAttribute="bottom" constant="8" id="TZI-nL-dSw"/>
+                    <constraint firstItem="OAc-pt-4lm" firstAttribute="leading" secondItem="LYG-je-jTj" secondAttribute="leadingMargin" constant="-7" id="XRr-M1-rCy"/>
+                    <constraint firstItem="XaU-1X-7Yc" firstAttribute="top" secondItem="NsM-FS-e2l" secondAttribute="bottom" constant="8" id="bdD-JR-y4m"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="OAc-pt-4lm" secondAttribute="bottom" id="bgS-N0-qPC"/>
+                    <constraint firstItem="XaU-1X-7Yc" firstAttribute="leading" secondItem="LYG-je-jTj" secondAttribute="leadingMargin" constant="-7" id="fQW-dl-k6w"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="laB-bY-Aaz" secondAttribute="trailing" id="fSz-An-uyQ"/>
+                    <constraint firstItem="laB-bY-Aaz" firstAttribute="centerY" secondItem="6zr-g7-s9f" secondAttribute="centerY" id="kn4-0Q-1vg"/>
+                    <constraint firstItem="6zr-g7-s9f" firstAttribute="leading" secondItem="OAc-pt-4lm" secondAttribute="trailing" constant="8" id="pg3-Af-534"/>
+                    <constraint firstItem="XaU-1X-7Yc" firstAttribute="leading" secondItem="LYG-je-jTj" secondAttribute="leadingMargin" id="quF-qm-LlE"/>
+                    <constraint firstItem="NsM-FS-e2l" firstAttribute="trailing" secondItem="LYG-je-jTj" secondAttribute="trailingMargin" id="vi1-nq-VTY"/>
                 </constraints>
                 <variation key="default">
                     <mask key="constraints">
-                        <exclude reference="ZEz-Nt-21j"/>
-                        <exclude reference="oGx-U6-7wv"/>
-                        <exclude reference="lsc-8E-5St"/>
-                        <exclude reference="fl3-0I-2Wb"/>
+                        <exclude reference="NdC-nw-eY0"/>
+                        <exclude reference="fQW-dl-k6w"/>
+                        <exclude reference="2VX-dd-lsW"/>
+                        <exclude reference="AMz-6I-sRp"/>
                     </mask>
                 </variation>
             </tableViewCellContentView>
             <connections>
-                <outlet property="descriptionText" destination="1C4-4s-Wyx" id="aVQ-JE-C4n"/>
-                <outlet property="dislikeImage" destination="90A-QQ-9CM" id="AmC-na-dRK"/>
-                <outlet property="likeButton" destination="vZM-fr-8oG" id="ecR-ky-9t3"/>
-                <outlet property="mainImage" destination="47H-ka-qoE" id="d8h-e0-hX1"/>
-                <outlet property="titleLabel" destination="Thj-Cs-i4l" id="Ga3-Aj-LgF"/>
+                <outlet property="descriptionText" destination="6zr-g7-s9f" id="dMW-Vp-Gcp"/>
+                <outlet property="dislikeImage" destination="laB-bY-Aaz" id="kTK-br-X5J"/>
+                <outlet property="likeButton" destination="OAc-pt-4lm" id="1ks-85-uDB"/>
+                <outlet property="mainImage" destination="XaU-1X-7Yc" id="tdA-N3-bZB"/>
+                <outlet property="titleLabel" destination="NsM-FS-e2l" id="loP-E2-WTd"/>
             </connections>
-            <point key="canvasLocation" x="439" y="22"/>
+            <point key="canvasLocation" x="368" y="244.5"/>
         </tableViewCell>
     </objects>
 </document>
