--- a/Vicinime-iOS/Card.xib
+++ b/Vicinime-iOS/Card.xib
@@ -1,50 +1,22 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="299" id="k6W-ho-S4c" customClass="CardCell" customModule="Vicinime_iOS" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="1" width="320" height="299"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="356" id="k6W-ho-S4c" customClass="CardCell" customModule="Vicinime_iOS" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="333" height="356"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="k6W-ho-S4c" id="LYG-je-jTj">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="laB-bY-Aaz">
-                        <rect key="frame" x="275" y="261" width="37" height="30"/>
-                        <state key="normal" title="☹">
-                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                        </state>
-                        <connections>
-                            <action selector="dislikeClick:" destination="k6W-ho-S4c" eventType="touchUpInside" id="Hc6-N7-1yO"/>
-                        </connections>
-                    </button>
-                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OAc-pt-4lm">
-                        <rect key="frame" x="8" y="261" width="37" height="30"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="30" id="ww0-6R-oGo"/>
-                        </constraints>
-                        <state key="normal" title="☺︎">
-                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                        </state>
-                        <connections>
-                            <action selector="likeClick:" destination="k6W-ho-S4c" eventType="touchUpInside" id="hnU-2E-lu9"/>
-                        </connections>
-                    </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NsM-FS-e2l">
-                        <rect key="frame" x="8" y="8" width="304" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="21" id="jxL-e4-DSP"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XaU-1X-7Yc">
-                        <rect key="frame" x="8" y="37" width="304" height="216"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XaU-1X-7Yc">
+                        <rect key="frame" x="0.0" y="37" width="333" height="262"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="318" id="gjS-nM-tDB"/>
                             <constraint firstAttribute="height" constant="254" id="xYP-GL-DX3"/>
@@ -56,55 +28,75 @@
                             </mask>
                         </variation>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6zr-g7-s9f">
-                        <rect key="frame" x="46" y="261" width="221" height="30"/>
+                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OAc-pt-4lm">
+                        <rect key="frame" x="8" y="318" width="26" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="221" id="iN7-gU-Wpa"/>
+                            <constraint firstAttribute="width" constant="26" id="35j-Ud-vti"/>
+                            <constraint firstAttribute="height" constant="30" id="HWd-cV-8h3"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                        <state key="normal" title="☺︎">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                        <connections>
+                            <action selector="likeClick:" destination="k6W-ho-S4c" eventType="touchUpInside" id="hnU-2E-lu9"/>
+                        </connections>
+                    </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NsM-FS-e2l">
+                        <rect key="frame" x="8" y="8" width="304" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="wMf-zx-Qit"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="laB-bY-Aaz">
+                        <rect key="frame" x="299" y="318" width="26" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="26" id="jva-TY-fAL"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                        <state key="normal" title="☹">
+                            <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                        <connections>
+                            <action selector="dislikeClick:" destination="k6W-ho-S4c" eventType="touchUpInside" id="Hc6-N7-1yO"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottomMargin" secondItem="OAc-pt-4lm" secondAttribute="bottom" constant="-0.5" id="1Jm-Hl-hfs"/>
-                    <constraint firstItem="XaU-1X-7Yc" firstAttribute="trailing" secondItem="NsM-FS-e2l" secondAttribute="trailing" id="1lC-bR-3Vk"/>
-                    <constraint firstItem="6zr-g7-s9f" firstAttribute="top" secondItem="XaU-1X-7Yc" secondAttribute="bottom" constant="8" id="2VX-dd-lsW"/>
-                    <constraint firstItem="XaU-1X-7Yc" firstAttribute="centerX" secondItem="LYG-je-jTj" secondAttribute="centerX" id="8HG-uJ-OJz"/>
-                    <constraint firstItem="OAc-pt-4lm" firstAttribute="leading" secondItem="XaU-1X-7Yc" secondAttribute="leading" id="8Uw-fO-SBF"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="6zr-g7-s9f" secondAttribute="bottom" id="AMz-6I-sRp"/>
-                    <constraint firstItem="OAc-pt-4lm" firstAttribute="bottom" secondItem="6zr-g7-s9f" secondAttribute="bottom" id="AiC-Aa-yL7"/>
-                    <constraint firstItem="laB-bY-Aaz" firstAttribute="trailing" secondItem="XaU-1X-7Yc" secondAttribute="trailing" id="GOp-1K-kNi"/>
-                    <constraint firstItem="XaU-1X-7Yc" firstAttribute="top" secondItem="NsM-FS-e2l" secondAttribute="bottom" constant="8" symbolic="YES" id="KyF-g1-LnP"/>
-                    <constraint firstItem="NsM-FS-e2l" firstAttribute="leading" secondItem="XaU-1X-7Yc" secondAttribute="leading" id="Lr4-kC-lao"/>
-                    <constraint firstItem="OAc-pt-4lm" firstAttribute="top" secondItem="XaU-1X-7Yc" secondAttribute="bottom" constant="8" symbolic="YES" id="Lvh-6W-gw0"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="laB-bY-Aaz" secondAttribute="trailing" constant="-7" id="1Du-SB-6F6"/>
+                    <constraint firstItem="OAc-pt-4lm" firstAttribute="baseline" secondItem="laB-bY-Aaz" secondAttribute="firstBaseline" id="4RT-nr-AEX"/>
+                    <constraint firstItem="OAc-pt-4lm" firstAttribute="baseline" secondItem="laB-bY-Aaz" secondAttribute="baseline" id="Akh-rc-eqD"/>
+                    <constraint firstItem="NsM-FS-e2l" firstAttribute="top" secondItem="LYG-je-jTj" secondAttribute="topMargin" id="EC4-Xh-6Sc"/>
+                    <constraint firstItem="laB-bY-Aaz" firstAttribute="top" secondItem="OAc-pt-4lm" secondAttribute="top" id="EX0-Rr-DjN"/>
+                    <constraint firstItem="XaU-1X-7Yc" firstAttribute="top" secondItem="NsM-FS-e2l" secondAttribute="bottom" constant="8" symbolic="YES" id="Jw1-o9-7ea"/>
                     <constraint firstAttribute="trailingMargin" secondItem="XaU-1X-7Yc" secondAttribute="trailing" constant="-7" id="NdC-nw-eY0"/>
-                    <constraint firstItem="laB-bY-Aaz" firstAttribute="baseline" secondItem="OAc-pt-4lm" secondAttribute="baseline" id="ZLs-0I-xEq"/>
-                    <constraint firstItem="NsM-FS-e2l" firstAttribute="top" secondItem="LYG-je-jTj" secondAttribute="topMargin" id="bLj-cG-D0Q"/>
+                    <constraint firstItem="XaU-1X-7Yc" firstAttribute="leading" secondItem="LYG-je-jTj" secondAttribute="leading" id="cOZ-oZ-YGb"/>
+                    <constraint firstItem="NsM-FS-e2l" firstAttribute="leading" secondItem="LYG-je-jTj" secondAttribute="leadingMargin" constant="-7" id="ecO-Op-iY5"/>
                     <constraint firstItem="XaU-1X-7Yc" firstAttribute="leading" secondItem="LYG-je-jTj" secondAttribute="leadingMargin" constant="-7" id="fQW-dl-k6w"/>
-                    <constraint firstItem="NsM-FS-e2l" firstAttribute="leading" secondItem="LYG-je-jTj" secondAttribute="leadingMargin" constant="-7" id="gCW-tF-RRZ"/>
-                    <constraint firstItem="laB-bY-Aaz" firstAttribute="leading" secondItem="6zr-g7-s9f" secondAttribute="trailing" constant="8" symbolic="YES" id="i9i-7n-s6N"/>
-                    <constraint firstItem="6zr-g7-s9f" firstAttribute="leading" secondItem="OAc-pt-4lm" secondAttribute="trailing" constant="1" id="kJg-ae-bJa"/>
-                    <constraint firstItem="6zr-g7-s9f" firstAttribute="leading" secondItem="LYG-je-jTj" secondAttribute="leading" constant="46" id="uIj-GN-Baw"/>
-                    <constraint firstItem="6zr-g7-s9f" firstAttribute="top" secondItem="OAc-pt-4lm" secondAttribute="top" id="wDl-27-BHF"/>
+                    <constraint firstItem="OAc-pt-4lm" firstAttribute="leading" secondItem="NsM-FS-e2l" secondAttribute="leading" id="mO0-5L-10u"/>
+                    <constraint firstAttribute="trailing" secondItem="XaU-1X-7Yc" secondAttribute="trailing" id="qAk-rL-8hk"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="NsM-FS-e2l" secondAttribute="trailing" constant="6" id="qNj-yd-yH0"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="OAc-pt-4lm" secondAttribute="bottom" constant="-0.5" id="xei-7L-VhA"/>
+                    <constraint firstItem="OAc-pt-4lm" firstAttribute="top" secondItem="XaU-1X-7Yc" secondAttribute="bottom" constant="19" id="xg3-O7-IzY"/>
                 </constraints>
                 <variation key="default">
                     <mask key="constraints">
                         <exclude reference="NdC-nw-eY0"/>
                         <exclude reference="fQW-dl-k6w"/>
-                        <exclude reference="2VX-dd-lsW"/>
-                        <exclude reference="AMz-6I-sRp"/>
                     </mask>
                 </variation>
             </tableViewCellContentView>
             <connections>
-                <outlet property="descriptionText" destination="6zr-g7-s9f" id="dMW-Vp-Gcp"/>
                 <outlet property="dislikeImage" destination="laB-bY-Aaz" id="kTK-br-X5J"/>
                 <outlet property="likeButton" destination="OAc-pt-4lm" id="1ks-85-uDB"/>
                 <outlet property="mainImage" destination="XaU-1X-7Yc" id="tdA-N3-bZB"/>
                 <outlet property="titleLabel" destination="NsM-FS-e2l" id="loP-E2-WTd"/>
             </connections>
-            <point key="canvasLocation" x="368" y="244.5"/>
+            <point key="canvasLocation" x="666.5" y="547"/>
         </tableViewCell>
     </objects>
 </document>
