--- a/Vicinime-iOS/Base.lproj/Main.storyboard
+++ b/Vicinime-iOS/Base.lproj/Main.storyboard
@@ -88,14 +88,14 @@
                     </tabBar>
                     <connections>
                         <segue destination="vQf-k3-ipX" kind="relationship" relationship="viewControllers" id="9Ci-hA-rrb"/>
-                        <segue destination="gF0-Xh-uxK" kind="relationship" relationship="viewControllers" id="DXh-dU-Zcv"/>
+                        <segue destination="5R0-zR-16e" kind="relationship" relationship="viewControllers" id="DXh-dU-Zcv"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3PA-Wj-y8Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="320" y="-344"/>
         </scene>
-        <!--Map-->
+        <!--Map View Controller-->
         <scene sceneID="NWn-XC-euc">
             <objects>
                 <viewController id="gF0-Xh-uxK" customClass="MapViewController" customModule="Vicinime_iOS" customModuleProvider="target" sceneMemberID="viewController">
@@ -107,7 +107,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="iBb-bu-fea">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="iBb-bu-fea">
                                 <rect key="frame" x="0.0" y="20" width="600" height="531"/>
                             </mapView>
                         </subviews>
@@ -119,12 +119,31 @@
                             <constraint firstItem="iBb-bu-fea" firstAttribute="top" secondItem="OHL-nn-GGG" secondAttribute="bottom" id="dOb-6q-bIu"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Map" id="xZP-nN-boD"/>
+                    <navigationItem key="navigationItem" id="e2A-Ca-mkH"/>
                     <connections>
                         <outlet property="mapView" destination="iBb-bu-fea" id="5D6-Vj-Dbx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p7r-jS-20u" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1132" y="440"/>
+        </scene>
+        <!--Map-->
+        <scene sceneID="xs1-QU-gyo">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="5R0-zR-16e" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Map" id="xZP-nN-boD"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="4hj-X0-cuy">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="gF0-Xh-uxK" kind="relationship" relationship="rootViewController" id="mPl-Ic-pMj"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ju0-li-ElY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="320" y="440"/>
         </scene>
